--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15
   provider: ^6.0.5
+  fl_chart: ^0.63.0
+  path_provider: ^2.1.1
+  
 
 dev_dependencies:
   flutter_test:
